Fix(*) Merge with Nicotine Warning Banner

--- a/assets/scss/custom/_header.scss
+++ b/assets/scss/custom/_header.scss
@@ -19,7 +19,7 @@
 .header__main {
 	font-size: 0; // for inline-block elements inside
 	margin: 0 auto;
-	padding: 1rem 0;
+	padding: 1rem 0 2rem 0;
 	width: 100%;
 	max-width: $layout-widthMax;
 }
