--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -114,3 +114,4 @@
 @import "custom/custom-partners";
 @import "custom/quick-order";
 @import "custom/custom-the-loop";
+@import "custom/nicotine-warning";
