--- a/templates/components/common/header.html
+++ b/templates/components/common/header.html
@@ -1,11 +1,5 @@
-{{#if banners.top}}
-	<div class="banners" data-banner-location="top">
-		<div class="banner">
-			{{{limit banners.top 1}}}
-		</div>
-	</div>
-{{/if}}
 <header class="header" role="banner">
+	{{> components/common/nicotineWarning }}
 	<div class="header__main">
 		<div class="header__main-logo header-logo--center">
 			{{> components/common/store-logo}}
