Fix(*) Gallery fixes

--- a/templates/pages/custom/product/product-the-loop.html
+++ b/templates/pages/custom/product/product-the-loop.html
@@ -106,7 +106,7 @@ product:
             <div class="col-12">
                 <video controls
                        poster="{{cdn 'webdav:/NJOY_loop_poster.png'}}"
-                       src="{{cdn 'webdav:/NJOY_LOOP_FINAL.webm'}}"
+                       src="{{cdn 'webdav:/njoy_final.mp4'}}"
                        width="900"
                        height="450">
                     Sorry, your browser doesn't support embedded videos.
@@ -115,7 +115,7 @@ product:
                         width="650" height="400"></object>-->
             </div>
         </div>
-        <div class="hide-on-mobile row loop-gallery">
+        <div class="hide-on-mobile row loop--gallery">
             <h1 class="title">
                 What's in the box
             </h1>
@@ -154,6 +154,24 @@ product:
                 </div>
             </div>
         </div>
+        <!--<div class="row gallery">
+            <div class="col-4 img-container">
+                <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/527/GRAY_sticks_1__17780.1530650543.1280.1280.png"
+                     alt="picture one">
+            </div>
+            <div class="col-4 img-container">
+                <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/542/pack__62908.1531239229.1280.1280.png"
+                     alt="picture one">
+            </div>
+            <div class="col-4 img-container">
+                <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/543/charge-a__86590.1531239462.1280.1280.png"
+                     alt="picture one">
+            </div>
+            <div class="col-4 img-container">
+                <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/540/153116414966459852__11523.1531164222.1280.1280.jpg"
+                     alt="picture one">
+            </div>
+        </div>-->
         <div class="hide-on-desktop row loop--slider">
             <div class="slide-class">
                 <div class="card row">
