--- a/assets/scss/custom/custom-the-loop.scss
+++ b/assets/scss/custom/custom-the-loop.scss
@@ -23,6 +23,10 @@
     display: none;
   }
 
+  .inline {
+    display: inline;
+  }
+
   // grid
 
   $width: 100%;
@@ -334,10 +338,7 @@
     }
 
   }
-  .loop-gallery {
-    position: relative;
-    max-width: 100%;
-    margin: 50px 0;
+  .loop--gallery {
     h1, h4 {
       text-align: center;
       text-transform: capitalize;
@@ -352,37 +353,25 @@
       font-size: 1.23em;
       margin-top: 0 !important;
     }
-    .images {
-      text-align: center;
-      display: inline-flex;
-      flex-direction: row;
-      justify-content: center;
-      @include breakpoint($large-only){
-        .card {
-          width: auto;
-          height: 400px;
-          figure {
-            img {
-              max-width: 100%;
-              max-height: 100%;
-              object-fit: cover;
-            }
-            figcaption {
-              text-align: center;
-              text-transform: capitalize;
-              font-size: 16px;
-              font-weight: bolder;
-            }
-          }
-        }
-      }
-      .card {
-        img {
-          max-width: 100%;
-          max-height: 100%;
-        }
-      }
 
+    .images {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: row;
+      height: 500px;
+      .card {
+        height: 400px;
+        img {
+          width: 400px!important;
+          height: 400px !important;
+        }
+        figcaption {
+          font-size: 16px;
+          font-weight: bolder;
+          text-align: center;
+          text-transform: capitalize;
+        }
+      }
     }
 
     @include breakpoint($medium-only) {
@@ -440,8 +429,19 @@
     }
   }
   // Page elements end
-  .inline {
-    display: inline;
+  .gallery {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    .img-container {
+      /*border: 1px solid red;*/
+      text-align: center;
+      img {
+        max-height: 400px!important;
+        object-fit: contain;
+      }
+    }
   }
 }
 
