--- a/assets/scss/custom/custom-the-loop.scss
+++ b/assets/scss/custom/custom-the-loop.scss
@@ -1,5 +1,13 @@
 .the-loop{
   // utility
+  margin-top: -15em;
+  @include breakpoint($large-only) {
+    margin-top: -10em;
+  }
+  @include breakpoint($medium-only) {
+    margin-top: -25em;
+  }
+
 
   .left {
     text-align: left;
@@ -36,12 +44,13 @@
   $breakpoint-large: 60em; // 960px
 
   .container {
-    width: 100%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
 
     @media only screen and (min-width: $breakpoint-small) {
       width: 80%;
+      max-width: 80rem;
     }
 
     @media only screen and (min-width: $breakpoint-large) {
@@ -173,15 +182,21 @@
       text-align: right;
       height: 30px;
       @media only screen and (max-width: $breakpoint-small) {
-        text-align: center;
+        text-align: left;
+        font-size: 12px;
       }
       li {
         text-align: center;
-        display: inline;
+        display: inline-block;
         list-style: none;
         margin-left: 15px;
         padding: 5px 0;
         cursor: pointer;
+        @include breakpoint($small-only) {
+          text-align: left;
+          margin-left: 10px;
+          display: inline-block;
+        }
       }
     }
     .order {
@@ -326,10 +341,10 @@
     overflow: hidden;
     video {
       position: absolute;
-      top: -20px;
+      top: 0;
       left: 0;
-      width: 102%;
-      height: 102%;
+      width: 100%;
+      height: 100%;
       &:after {
           -webkit-box-sizing: content-box !important;
           -moz-box-sizing: content-box !important;
@@ -407,6 +422,20 @@
   }
   .loop--slider{
     text-align: center;
+    h1, h4 {
+      text-align: center;
+      text-transform: capitalize;
+    }
+    h1.title {
+      font-weight: 600;
+      font-size: 2.3em;
+    }
+    h4.subtitle {
+      font-weight: 800;
+      font-style: italic;
+      font-size: 1.23em;
+      margin-top: 0 !important;
+    }
     .card {
       padding: 50px;
       position: relative;
@@ -454,4 +483,8 @@
 
 .offer {
   font-size: 16px;
+}
+
+#loopOfferModal {
+  top: 70% !important;
 }
