--- a/templates/pages/custom/product/product-the-loop.html
+++ b/templates/pages/custom/product/product-the-loop.html
@@ -108,7 +108,7 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
                        width="900"
                        height="450"
                        poster="{{cdn 'webdav:/NJOY_loop_poster.png'}}">
-                    <source src="{{cdn 'webdav:/njoy_final.webm'}}" type="video/webm">
+                    <source src="assets/img/njoy_final.webm" type="video/webm">
                     <source src="{{cdn 'webdav:/njoy_final.mp4'}}" type="video/mp4">
                     Sorry, your browser doesn't support embedded videos.
                 </video>
