Hero Carousel spacing

--- a/assets/scss/custom/nicotine-warning.scss
+++ b/assets/scss/custom/nicotine-warning.scss
@@ -10,6 +10,10 @@
   padding-top: calc(7rem + 20vh);
 }
 
+.heroCarousel {
+  padding-top: 20vh;
+}
+
 .nicotineWarning {
   background: #fff;
   position: fixed;
