--- a/assets/scss/custom/nicotine-warning.scss
+++ b/assets/scss/custom/nicotine-warning.scss
@@ -16,28 +16,30 @@
 
 .nicotineWarning {
   background: #fff;
+  box-sizing: border-box;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 20vh;
+  width: calc(100% - 20px);
+  height: calc(20vh - 20px);
 
-  border: 7px solid #000;
-  border-left: 0;
-  border-right: 0;
+  margin: 10px;
+  border: 10px solid #000;
 
   padding: 0 5%;
   z-index: 10000;
 }
 
 .nicotineWarning__inner {
-  font-size: 15px;
-  margin-top: 10vh;
+  font-size: 22px;
+  margin-top: calc(10vh - 20px);
   text-align: center;
   transform: translateY(-50%);
 
   @include breakpoint("small") {
-    font-size: 25px;
+    font-size: 30px;
   }
 
 }
