Fix(*) gallery images

--- a/templates/pages/custom/product/product-the-loop.html
+++ b/templates/pages/custom/product/product-the-loop.html
@@ -123,32 +123,32 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
             <h4 class="subtitle">
                 - Loop Pods sold separately -
             </h4>
-            <div class="images">
-                <div class="card" id="showPopOne">
-                    <figure id="galleryOne" style="height: 400px;">
+            <div class="images row">
+                <div class="card col-3" id="showPopOne">
+                    <figure id="galleryOne">
                         <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/527/GRAY_sticks_1__17780.1530650543.1280.1280.png"
                              alt="picture one">
                         <figcaption>2 Rechargeable Vaporizers </figcaption>
                     </figure>
                 </div>
-                <div id="showPopTwo" class="card">
+                <div id="showPopTwo" class="card col-3">
                     <figure id="galleryTwo">
-                        <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/542/pack__62908.1531239229.1280.1280.png"
-                             alt="picture one" style="height: 400px;">
+                        <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/551/box__59455.1531514559.1280.1280.png"
+                             alt="picture one">
                         <figcaption>Sleek charging case</figcaption>
                     </figure>
                 </div>
-                <div id="showPopThree" class="card">
+                <div id="showPopThree" class="card col-3">
                     <figure id="galleryThree">
-                        <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/543/charge-a__86590.1531239462.1280.1280.png"
-                             alt="picture one" style="height: 400px;">
+                        <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/549/usb__38632.1531514559.1280.1280.png"
+                             alt="picture one">
                         <figcaption>Rapid Charge Accessory</figcaption>
 
                     </figure>
                 </div>
-                <div id="showPopFour" class="card" style="height: 400px;">
+                <div id="showPopFour" class="card col-3">
                     <figure id="galleryFour">
-                        <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/540/153116414966459852__11523.1531164222.1280.1280.jpg"
+                        <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/550/power__42358.1531514559.1280.1280.png"
                              alt="picture one">
                         <figcaption>USB-USBc Power Cable</figcaption>
                     </figure>
