--- a/assets/scss/custom/custom-the-loop.scss
+++ b/assets/scss/custom/custom-the-loop.scss
@@ -370,15 +370,14 @@
     }
 
     .images {
-      display: flex;
-      justify-content: space-between;
-      flex-direction: row;
-      height: 500px;
       .card {
-        height: 400px;
+        display: inline-flex;
+        justify-content: space-evenly;
+        margin-left: 2em;
         img {
-          width: 400px!important;
-          height: 400px !important;
+          max-width: 80%;
+          max-height: 80%;
+          margin-left: 20px;
         }
         figcaption {
           font-size: 16px;
